--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "axios": "^1.6.1",
+        "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
         "http-proxy-middleware": "^2.0.6",
         "react": "^18.2.0",
@@ -41,6 +42,7 @@
         "@types/node": "^12.20.55",
         "@types/react": "^17.0.47",
         "@types/react-dom": "^17.0.17",
+        "dotenv-cli": "^7.3.0",
         "react-app-rewired": "^2.2.1",
         "stylelint": "^14.9.1",
         "stylelint-config-standard-scss": "^5.0.0",
