--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@progress/kendo-licensing": "^1.3.4",
+        "@progress/kendo-react-dateinputs": "^7.0.2",
+        "@progress/kendo-react-intl": "^7.0.2",
+        "@progress/kendo-svg-icons": "^2.1.0",
+        "@progress/kendo-theme-default": "^7.0.2",
         "axios": "^1.6.1",
         "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
