--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@progress/kendo-react-intl": "^7.0.2",
         "@progress/kendo-svg-icons": "^2.1.0",
         "@progress/kendo-theme-default": "^7.0.2",
+        "@react-google-maps/api": "^2.19.2",
         "axios": "^1.6.1",
         "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.1",
+        "use-places-autocomplete": "^4.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
