--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@pixi/react": "^7.1.1",
         "@progress/kendo-licensing": "^1.3.4",
         "@progress/kendo-react-dateinputs": "^7.0.2",
         "@progress/kendo-react-intl": "^7.0.2",
@@ -13,7 +14,9 @@
         "dotenv": "^16.3.1",
         "firebase": "^10.7.1",
         "google-maps-react-markers": "^2.0.7",
+        "gsap": "^3.12.4",
         "http-proxy-middleware": "^2.0.6",
+        "pixi.js": "^7.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.1",
